# docs/swagger.json
@@ -228,6 +228,12 @@
                             "$ref": "#/definitions/responses.Login"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorCode"
+                        }
+                    },
                     "401": {
                         "description": "InvalidCredentials",
                         "schema": {
@@ -240,6 +246,18 @@
                             "$ref": "#/definitions/utils.ErrorCode"
                         }
                     }
+                }
+            }
+        },
+        "/user/logout": {
+            "get": {
+                "description": "Logout",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Logout",
+                "responses": {
+                    "200": {}
                 }
             }
         }
